<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/wrong"
            android:layout_width="258dp"
            android:layout_height="69dp"
            android:id="@+id/result"
            android:textColor="#F00"
            android:textAlignment="center" android:textSize="19sp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.503"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.43"
            android:textStyle="bold"/>
    <TextView
            android:layout_width="258dp"
            android:layout_height="41dp"
            android:id="@+id/hint"
            android:textColor="#000"
            android:textAlignment="center" android:textSize="20sp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.496"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.887"/>
    <TextView
            android:text="@string/points_0"
            android:layout_width="258dp"
            android:layout_height="41dp"
            android:id="@+id/points"
            android:textColor="#000"
            android:textAlignment="center" android:textSize="20sp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.496"
            android:textStyle="bold" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.808"/>
    <Button
            android:text="@string/restart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/restartButton" android:background="#003057"
            android:textColor="#ffffff" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.814" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.688"
            android:onClick="restartButton"/>
    <Button
            android:text="@string/check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkButton" android:background="#003057"
            android:textColor="#ffffff" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.688"
            android:onClick="checkButton"/>
    <TextView
            android:text="@string/answer_is"
            android:layout_width="258dp"
            android:layout_height="41dp"
            android:id="@+id/textView9"
            android:textColor="#000"
            android:textAlignment="center" android:textSize="20sp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.503"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.532"/>
    <TextView
            android:text="@string/_20"
            android:layout_width="77dp"
            android:layout_height="64dp"
            android:id="@+id/higherNum"
            android:textSize="36sp" android:textColor="#85714d" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.786"
            android:textAlignment="center" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.328"/>
    <TextView
            android:text="@string/oracle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:fontFamily="sans-serif-condensed-medium" android:textSize="36sp" android:textColor="#003057"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.076"/>
    <TextView
            android:text="@string/i_m_thinking_about_number_between"
            android:layout_width="259dp"
            android:layout_height="80dp"
            android:id="@+id/textView3"
            android:textColor="#000"
            android:textAlignment="center" android:textSize="20sp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.177"/>
    <TextView
            android:text="@string/_1"
            android:layout_width="77dp"
            android:layout_height="64dp"
            android:id="@+id/lowerNum"
            android:textSize="36sp" android:textColor="#85714d" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.213"
            android:textAlignment="center" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.328"/>
    <TextView
            android:text="@string/and"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:id="@+id/textView6" android:textSize="30sp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:textColor="#000" app:layout_constraintHorizontal_bias="0.498"
            android:textStyle="bold" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.344"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/answer" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:hint="@string/your_answer" android:textAlignment="center"
            android:singleLine="false" android:selectAllOnFocus="false" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.597"
            android:autofillHints=""/>
    <Button
            android:text="@string/hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hintButton" android:background="#003057"
            android:textColor="#ffffff" android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.185" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.688"
            android:onClick="hintButton"/>
</android.support.constraint.ConstraintLayout>